[metadata]
name = solun
version = 0.0.3
author = Daniel Wagner
author_email = contact@solun.pm
url = https://solun.pm/
description = Solun-CLI is a command line interface tool for uploading files to Solun.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = CLI, file-upload, solun, solun-cli, solun-pm
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    httpx==0.25.1
    python_bcrypt==0.3.2
    tqdm==4.66.1

[options.entry_points]
console_scripts = 
    solun = solun.main:main

[options.package_data]
example = data/schema.json, *.txt
* = README.md